
[workspace]
members = ["server", "client"]

resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Kirill Lykov"]
repository = "https://github.com/tobedone"
license = "MIT"
edition = "2021"


[workspace.dependencies]
anyhow = "1.0.22"
bytes = { version = "1.5" }
thiserror = "1.0.58"
directories-next = "2"
tokio = { version = "1.28.1", features = [
    "full",
    "rt",
    "rt-multi-thread",
    "time",
    "macros",
    "sync",
    "tracing",
] }
tokio-util = {version = "*"}
rustls = { version = "0.23.12", features = ["ring"] }
rustls-pemfile = "1.0.0"
tracing = "0.1.10"
tracing-subscriber = { version = "0.3.0", default-features = false, features = [
    "env-filter",
    "fmt",
    "ansi",
    "time",
    "local-time",
] }
tracing-futures = { version = "0.2.0", default-features = false, features = [
    "std-future",
] }
rand = "0.8"
clap = { version = "4", features = ["derive"] }
url = "2"
quinn = { path = "../quinn/quinn" }
quinn-proto = { path = "../quinn/quinn-proto" }
rcgen = "0.12.0"
solana-streamer = "1.18.0"
solana-sdk = "1.18.0"
futures = "0.3.28"
rand_chacha = "0.3.1"
itertools = { version = "*" }
bincode = { version = "*" }
serde_json = { version = "*" }
log = { version = "*" }
pem = { version = "*" }
smallvec = "1.13.2"

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/anza-xyz/curve25519-dalek.git", rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464" }
