[package]
name = "client"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-futures = { workspace = true }
rand = { workspace = true }
clap = { workspace = true, features = ["derive", "cargo"] }
url = { workspace = true }
quinn_master = { workspace = true, optional = true }
quinn_10 = { workspace = true, optional = true }
rcgen = { workspace = true }
solana-streamer = { workspace = true }
solana-sdk = { workspace = true }
log = { workspace = true }
itertools = { workspace = true }
bincode = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
rand_chacha = { workspace = true }

[features]
default = ["use_quinn_master"]
use_quinn_master = ["quinn_master"]
use_quinn_10 = ["quinn_10"]