[package]
name = "server"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
pem = { workspace = true }
quinn_master = { workspace = true,optional = true }
quinn-proto_master = { workspace = true,optional = true }
quinn_10 = { workspace = true, optional = true}
quinn-proto_10 = { workspace = true, optional = true}
rand = { workspace = true }
rand_chacha = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true, features = ["dangerous_configuration"] }
rustls-pemfile = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
solana-sdk = { workspace = true }
solana-streamer = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-futures = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["use_quinn_master"]
use_quinn_10 = ["quinn_10", "quinn-proto_10"]
use_quinn_master = ["quinn_master", "quinn-proto_master"]