[package]
name = "server"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
chrono = { workspace =  true }
futures = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
pem = { workspace = true }
quinn-proto_11 = { workspace = true, optional = true}
quinn-proto_master = { workspace = true,optional = true }
quinn_11 = { workspace = true, optional = true}
quinn_master = { workspace = true,optional = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
solana-sdk = { workspace = true }
solana-streamer = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-futures = { workspace = true }
tracing-subscriber = { workspace = true }
x509-parser = { workspace = true }

[features]
default = ["use_quinn_master"]
use_quinn_11 = ["quinn_11", "quinn-proto_11"]
use_quinn_master = ["quinn_master", "quinn-proto_master"]